# zero2production

./: Cargo.toml  Dockerfile  README.md  config.yaml  sqlx-data.json
migrations/: 20210516075321_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: healthz.rs
