[package]
name = "zero2prod"
version = "0.1.0"
authors = ["mortar <53ff0bae@opayq.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"
config = "0.11.0"
serde = "1.0.126"

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11.3"
tokio = "1"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
